--- a/front-end-patient-app/doctorSelect.css
+++ b/front-end-patient-app/doctorSelect.css
@@ -6,7 +6,8 @@ body{
 }
 table {
     border-collapse: collapse;
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
   }
   
   #table-element {
@@ -17,7 +18,10 @@ table {
   #table-picture, #table-element {
       text-align: center;
   }
-  
-  tr:nth-child(even) {
-    background-color: transparent;
+
+  .resize {
+      padding-top: 50px;
+      padding-bottom: 50px;
+      width: 300px;
+      height: 300px;
   }
