--- a/front-end-patient-app/doctorSelect.css
+++ b/front-end-patient-app/doctorSelect.css
@@ -10,18 +10,14 @@ table {
     margin: 0 auto;
   }
   
-  #table-element {
-    border: 1px solid #dddddd;
-    padding: 8px;
-  }
-
   #table-picture, #table-element {
-      text-align: center;
+    border: 1px solid #dddddd;
+    padding: 20px;
+    vertical-align: middle;
   }
 
   .resize {
-      padding-top: 50px;
-      padding-bottom: 50px;
-      width: 300px;
-      height: 300px;
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
   }
