changing table in doctorSelect to be responsive. the app will now refresh when code is added/changed :-)

--- a/front-end-patient-app/doctorSelect.css
+++ b/front-end-patient-app/doctorSelect.css
@@ -8,16 +8,17 @@ table {
     border-collapse: collapse;
     width: 90%;
     margin: 0 auto;
-  }
+}
   
- td {
+td {
     border: 1px solid #dddddd;
-    padding: 20px;
     vertical-align: middle;
-  }
+    font-size: xx-large;
+    
+}
 
-  .resize {
+.resize {
       width: 200px;
       height: 200px;
       object-fit: cover;
-  }
+}
