Functioning calendar GUI
Confrimation button does not function yet

--- a/front-end-patient-app/timeSelect.css
+++ b/front-end-patient-app/timeSelect.css
@@ -14,7 +14,7 @@
 }
 
 .calendar-btn {
-  background-color: rgba(42, 144, 204, 0.8);
+  background-color: #c6d9e4cc;
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
