--- a/front-end-patient-app/timeSelect.css
+++ b/front-end-patient-app/timeSelect.css
@@ -3,6 +3,7 @@
   grid-template-columns: auto auto auto auto auto auto auto auto;
   background-color: #2196F3;
   padding: 10px;
+  width: 60%;
 }
 
 .grid-item {
